<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn5"
        android:text="@string/bnt5"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn5"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="30dp"
        android:text="@string/bnt3" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn5"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/btn3"
        android:layout_alignBottom="@id/btn3"
        android:text="@string/bnt4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn1"
        android:text="@string/bnt1"
        android:layout_marginHorizontal="50dp"
        android:layout_marginStart="50dp"
        android:layout_above="@id/btn3"
        android:layout_marginBottom="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn2"
        android:text="@string/bnt2"
        android:layout_marginStart="120dp"
        android:layout_alignBottom="@id/btn1"
        android:layout_above="@id/btn4"
        android:layout_toEndOf="@id/btn1"/>


</RelativeLayout>
