<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow>

        <Button
            android:id="@+id/red"
            android:text="@string/red"
            android:textColor="#F44336"
            android:layout_column="1"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/blue"
            android:text="@string/blue"
            android:textColor="#00BCD4"
            android:layout_column="2"
            style="?android:attr/button"/>

        <Button
            android:id="@+id/green"
            android:layout_weight="2"
            android:text="@string/green"
            android:textColor="#4CAF50"
            android:layout_column="3"
            style="?android:attr/button"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/view"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="#FFFFFF" />
    </TableRow>
    <TableRow>

        <Button
            android:id="@+id/clear"
            android:layout_column="3"
            android:layout_weight="2"
            android:text="@string/clear"
            style="?android:attr/button"/>
    </TableRow>


</TableLayout>